EX-3823 LInk fix + EX-3826 spacing fix

--- a/modules/offers-v2/sources/styles/__ticket-voucher.scss
+++ b/modules/offers-v2/sources/styles/__ticket-voucher.scss
@@ -24,7 +24,7 @@ body {
 .cqz-ticket-offer {
     position: relative;
     max-width: 1000px;
-    margin: 0 auto 7px;
+    margin: 7px auto;
     padding: 0  10px;
 
     .cqz-offer-holder {
